--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
   cursor: pointer;
 }
 .btn:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 /* Heading */
 .title,
@@ -74,7 +74,7 @@
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
+  border: 1px solid #ddd;
   background: #FFF;
   border-radius: 6px;
   font-family: Lato, sans-serif;
