--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 }
 /* Heading */
 .title,
-.label[for='new-task'] {
+.label-new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +85,7 @@
 }
 
 /* New Task */
-.label[for='new-task'] {
+.label-new-task {
   display: block;
   margin: 0 0 20px;
 }
